# AI_Engine

./: .gitignore  AABB.cpp  AABB.h  BoundingSphere.h  BoundingStructures.h  CMakeLists.txt  Camera.cpp  Camera.h  DrawBall.cpp  DrawBall.h  OBB.cpp  OBB.h  README.md  Shader.cpp  Shader.h  ball.h  ball.stl  fragmentShaderSource.frag  irregular.h  irregular.stl  main.cpp  model_data.h  object.cpp  object.h  physicManager.cpp  physicManager.h  room.h  stb_image.h  stl_to_vertex_array.cpp
imgui/: imconfig.h  imgui_impl_glfw.h  imgui_impl_glut.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imstb_truetype.h
picSource/: ballmodel.stl  smallmodel.stl
